# emulas-core

./: .gitignore  Cargo.toml  README.md  Release.toml
.github/: pull_request_template.md
.github/workflows/: ci-linux.yml  ci-release.yml  ci-windows.yml  ci.yml
mapper/: abstract.rs
src/: _main.rs  lib.rs  main.rs
src/cpu/: _instructions.rs  flags.rs  instruction.rs  interpreter.rs  mod.rs
src/cpu/interpreter/: _traits.rs  flags.rs  main.rs
src/memory/: bus.rs  mod.rs
src/rom/: header.rs
src/sys/: errors.rs  interfaces.rs  mod.rs  rom_file.rs
src/sys/linux/: rom_file.rs
