[package]
description = "Emulador NES feito em Rust"
edition = "2024"
license = "MIT"
name = "rust-emulas"
readme = "README.md"
repository = "https://github.com/wesleyholiveira/rust-emulas/"
version = "0.4.0"

[profile.release]
lto = true
opt-level = 3

[dependencies]
bitflags = "2.9.0"
log = "0.4.27"
sdl3-sys = {version = "0.4.7", features = ["build-from-source"]}
tempfile = "3.3.0"
